...
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/background">

    <!-- Header -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/text_red"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tb_note_payout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SAVE"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


...
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="Description: "
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/description_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_title" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="224dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:text="Type: "
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/type_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_description" />

        <Button
            android:id="@+id/type_checkbox"
            android:layout_width="57dp"
            android:layout_height="36dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rb_detail_shape"
            android:text="type"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@+id/item_money"
            app:layout_constraintStart_toEndOf="@+id/item_type"
            app:layout_constraintTop_toBottomOf="@+id/description_input" />

        <TextView
...

    </android.support.constraint.ConstraintLayout>


    <!-- numerical keyboarder -->
    <LinearLayout
        android:id="@+id/keyboard"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
...
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/tb_calc_num_2"
                    android:text="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/bg_radius_click"
...
                    android:textColor="#000000" />
                <View
                    style="@style/vertical_decoration_style"
                    android:background="#8c8c8c"
                    />
                <TextView
                    android:id="@+id/tb_calc_num_3"
                    android:text="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center"
...
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/tb_calc_num_5"
                    android:text="5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/bg_radius_click"
...
                    android:textColor="#000000" />
                <View
                    style="@style/vertical_decoration_style"
                    android:background="#8c8c8c"
                    />
                <TextView
                    android:id="@+id/tb_calc_num_9"
                    android:text="9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center"
...
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/tb_calc_del"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/tb_calc_num_done"
                android:text="SAVE"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
...
