<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_detail_list_view"
    android:padding="10dp"
    android:orientation="vertical">

    <ListView
        android:id="@+id/detail_list"
        android:layout_width="match_parent"
        android:layout_height="396dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="confirm"
        android:layout_margin="8dp"
        android:background="@drawable/confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_list"/>

</android.support.constraint.ConstraintLayout>