...
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@mipmap/mybook_manager"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/Container"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c4c6c5">
    </View>

    <com.example.zhanyuan.finalapp.views.BaseBottomBar
        android:id="@+id/main_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom"
        android:background="#FFFFFF">

        <RelativeLayout
...
